Changes from grid_2.9.0 to grid_2.10.0:
--------------------------------------

1.  Added showViewport() function for displaying viewport trees
    graphically.

2.  Fixed bug in unit() indexing;  negative integer indices now work.

3.  Modified behaviour of editGrob() and addGrob() so that they 
    return the original grob if the specified gPath does not exist,
    and issue a warning (if new argument 'warn' is TRUE).
    

Changes from grid_2.8.0 to grid_2.9.0:
------------------------------------

1.  Copied grid.roundRect() from 'RGraphics' package into 'grid'.

    Renamed to grid.roundrect() and also used roundrectGrob()
    rather than roundRect(), partly for more consistent naming,
    partly to avoid namespace collision until original functions
    get removed from 'RGraphics' package.

2.  Fixed bug in grid.curve() when curve is horizontal or vertical
    straight line.

3.  Exposed is.grob() and valid.just() via the NAMESPACE.

4.  Fixed bug in downViewport(), which meant that unsuccessful
    downViewport()s were still being recorded on the graphics
    engine display list.  This could cause interesting results
    when a window is resized (i.e., when the display list is 
    replayed).  

    Bug reported by Felix Andrews.

5.  Added some pseudonyms for come units.  For example, it is now
    possible to specify just "in" instead of "inches".


Changes from grid_2.7.0 to grid_2.8.0:
------------------------------------

1.  Added grid.null() and nullGrob();  grob that is guaranteed
    to have zero-width, zero-height, and draw nothing.

    Useful as zero-size placeholder AND as invisible reference
    point for other grobs to draw relative to.

2.  Fixed bug in listing, via grid.ls(), of frame grobs.  If the frame
    had a vpPath in its 'vp' component, you got an error from vpStack().

    Problem reported by Hadley Wickham.

3.  Fixed a bug in grid.ls() when attempting to list the display list